fix: [TG-96] replace margins with flex-gaps

--- a/src/components/main/UluWorkspaceSettingsModal/WorkspaceSettingsFoldersList.module.scss
+++ b/src/components/main/UluWorkspaceSettingsModal/WorkspaceSettingsFoldersList.module.scss
@@ -5,10 +5,6 @@ $itemHeight: 2.5rem;
   background: var(--color-interactive-element-hover);
   border-radius: 6px;
   margin-top: 1rem;
-  max-height: 100%;
-}
-
-.container {
   max-height: calc(#{$itemHeight} * 8);
   overflow-y: overlay;
 }
