--- a/src/components/ulu/onboarding/steps/CreateWorkspace.module.scss
+++ b/src/components/ulu/onboarding/steps/CreateWorkspace.module.scss
@@ -10,3 +10,13 @@
 	gap: 0.25rem;
 	cursor: pointer;
 }
+
+$folderHeight: 2.5rem;
+
+.folder {
+	max-height: $folderHeight;
+}
+
+.folders {
+	max-height: calc(#{$folderHeight} * 4);
+}
