--- a/src/components/ulu/onboarding/util/Layout.module.scss
+++ b/src/components/ulu/onboarding/util/Layout.module.scss
@@ -3,6 +3,21 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	flex-grow: 1;
+	gap: 5rem;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	gap: 2.5rem;
+}
+
+.titles {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .title {
@@ -16,7 +31,6 @@
 }
 
 .subtitle {
-	margin-top: 1rem;
 	color: rgba(255, 255, 255, 0.40);
 	text-align: center;
 	// font-family: Inter Tight;
@@ -26,13 +40,7 @@
 	line-height: 1.75rem; /* 155.556% */
 }
 
-.children {
-	margin-top: 2.5rem;
-}
-
 .actionButton {
-	margin-top: 5rem;
-
 	border-radius: 0.75rem;
 	border: 1px solid rgba(255, 255, 255, 0.04);
 	background: rgba(255, 255, 255, 0.04);
